minor bugs fixed

--- a/templates/index.html
+++ b/templates/index.html
@@ -187,7 +187,7 @@
                         В этой игре вы соревнуетесь с другими игроками, составляя математические выражения из карт в руке, чтобы получить числа, лежащие на столе. Используйте свои навыки арифметики и стратегии, чтобы набрать 15 очков и победить!
                     </p>
                     <!-- Кнопка для правил -->
-                    <button class="btn btn-link p-0 mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#rulesCollapse" aria-expanded="false" aria-controls="rulesCollapse">
+                    <button class="btn btn-info p-0 mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#rulesCollapse" aria-expanded="false" aria-controls="rulesCollapse">
                         Правила и механика
                     </button>
                     <div class="collapse" id="rulesCollapse">
@@ -213,7 +213,7 @@
                         </ul>
                     </div>
                     <!-- Кнопка для "Как начать игру" -->
-                    <button class="btn btn-link p-0 mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#howToStartCollapse" aria-expanded="false" aria-controls="howToStartCollapse">
+                    <button class="btn btn-info p-0 mb-2" type="button" data-bs-toggle="collapse" data-bs-target="#howToStartCollapse" aria-expanded="false" aria-controls="howToStartCollapse">
                         Как начать игру
                     </button>
                     <div class="collapse" id="howToStartCollapse">
